# describe-anything

./: DAM_API_GUIDE.md  dam_server.py  describe_image.py  environment-client.yml  pyproject.toml
dam/: describe_anything_model.py
docker/: Dockerfile  docker_build_describe_anything.sh  docker_build_with_fallback.sh  run_describe_anything_api.sh  run_describe_anything_container.sh  smoke_test_describe_anything_api.sh
